--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,358 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+ :root{
+  --primary-color:white;
+  --secondary-color:#3a3a3a;
+  --accent-color1-:#4089c8;
+  --accent-color2-:rgba(197, 234, 250, 0.668);
+
+ }
 /******* Change Box Model ***************/
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+}
+ 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+ 
+h1, h2 {
+  font-family:"Roboto Slab", serif;
+  font-size: 1.2em;
+}
+#wrapper {
+  width: 100%;
+  background-color:var(--primary-color);
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 1em;
+}
+ 
+section {
+  margin-bottom: 2em;
+  margin-top: 1em;
+}
+ 
+section h2, h1 {
+  margin-left: 0.25em;
+}
+ 
+/*
+Header styles
+*/
+#top-header {
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+ 
+header a {
+  align-self: center;
+  text-decoration: none;
+  color:var(--secondary-color);
+}
+ 
+.siteName {
+  margin-left: 10px;
+  font-size: 2em;
+}
+ 
+#tools {
+  font-size: 1.2em;
+  margin-right: 10px;
+}
+/*
+Nav styles
+*/
+nav {
+  background-color: var(--secondary-color);
+  color:var(--primary-color);
+  padding:3px;
+}
+ 
+nav ul {
+  display: flex;
+  padding: 0 0 0 0.25rem;
+  justify-content: space-evenly;
+  max-width: 100%;
+}
+ 
+nav a {
+  color:var(--primary-color);
+  text-decoration: none;
+  font-size: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+ 
+nav li {
+  list-style: none;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+ 
+#inv-display li {
+  list-style: none;
+}
+
+/*
+Footer styles
+*/
+footer p {
+  margin-left: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 0.9em;
+}
+ 
+main {
+  padding-left: 0.25rem;
+}
+#delorean {
+  background-image: url("/images/vehicles/delorean.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position-x: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+}
+ 
+#delorean h2 {
+  margin-left: 0;
+}
+ 
+#delorean a:hover {
+  opacity: 0.5;
+}
+ 
+#delorean li {
+  list-style: none;
+  color: var(--accent-color1-);
+}
+ 
+#delorean li h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--accent-color1-);
+}
+ 
+#delorean ul {
+  padding: 10px;
+  margin-top: 0;
+  max-width: 200px;
+  margin-left: 0.5em;
+  margin-bottom: 8em;
+  border-radius: 10px;
+  background-color: var(--accent-color2-);
+}
+ 
+#delorean li {
+  font-size: 0.85em;
+}
+ 
+#actionbtn {
+  display: block;
+  width: 65%;
+  margin-top: 1.5em;
+}
+ 
+#actionbtn:hover {
+  opacity: 0.5;
+}
+ 
+.flex {
+  display: flex;
+  margin-bottom: 2em;
+  justify-content: center;
+  width: 100%;
+  padding-left: 0.25em;
+}
+ 
+.flex a {
+  width: 100%;
+}
+ 
+.add-col {
+  background-color: var(--accent-color1-);
+  height: 5.5em;
+  width: 95%;
+}
+ 
+a figure {
+  margin: 0;
+}
+ 
+figure img {
+  display: block;
+  margin: auto;
+  padding-top: 0.5em;
+}
+ 
+figure figcaption {
+  text-align: center;
+}
+ 
+#review li {
+  font-size: 0.9em;
+  margin-bottom: 1em;
+}
+ 
+#inv-display {
+  display: flex;
+  flex-wrap: wrap;
+}
+ 
+#inv-display li{
+  background-color: var(--accent-color2-);
+  border-radius: 10px;
+  list-style: none;
+  padding: 10px;
+  margin: 10px;
+}
+ 
+#inv-display a{
+  text-decoration: none;
+}
+#inv-display a:hover{
+  color:var(--accent-color1-);
+}
+
+.namePrice a{
+  color: var(--secondary-color);
+}
+
+/***************************************/
+@media only screen and (min-width: 768px) {
+ 
+  body {
+    background-image: url("/images/site/small_check.jpg");
+    background-size: cover;
+  }
+ 
+  h1 {
+    font-size: 1.9em;
+  }
+  
+  /*
+  Nav Styles
+  */
+  nav {
+    margin: 0.75rem;
+  }
+ 
+  nav li {
+    margin: 0;
+    font-size: 1.2em;
+    padding: 0;
+    text-align: center;
+  }
+ 
+  nav a {
+    display: inline-block;
+    width: 4.5em;
+    padding: 0.25rem 0;
+  }
+ 
+  nav a:hover {
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
+  }
+  
+  #wrapper {
+    border: 5px solid var(--accent-color1-);
+    border-radius: 10px;
+    margin-top: 1em;
+    width: 75%;
+  }
+ 
+  #delorean ul {
+    font-size: 1.6em;
+    margin-left: 2em;
+    margin-top: 1em;
+    margin-bottom: 15em;
+  }
+ 
+  #delorean {
+    background-size: contain;
+    margin-bottom: 0;
+  }
+ 
+  #actionbtn {
+    display: block;
+    width: 90%;
+    margin-top: 1.5em;
+  }
+ 
+.flex-content {
+  display: flex;
+  justify-content: space-around;
+}
+ 
+#review h2, #add-ons h2 {
+  font-size: 1.4em;
+  margin-bottom: 2em;
+}
+ 
+#add-ons {
+  order: -1;
+}
+ 
+#review li {
+  font-size: 1.1em;
+}
+ 
+#add-ons {
+  width: 45%;
+}
+ 
+#add-ons, #review {
+  margin-top: 0;
+}
+
+#inv-display {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+} 
+
+#item-display {
+  display: flex;
+  border: 2px solid var(--accent-color1-);
+  flex-direction: column;
+  border-radius: 5px;
+}
+ 
+.vertical-line {
+  height: inherit;
+}
+ 
+#item_image img{
+  max-width:100%;
+  height: auto;
+}
+ 
+#navigation ul {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  align-items: flex-start;
+  align-content: space-between;
+}
+
+ /*form styling */
+ .account {
+  width: 500px;
+  margin:10px;
+  font-size: 16px;
+  }
+.account button{
+  margin-top: 10px;
+  font-size: 18px;
+}
+
 }
