--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -99,6 +99,43 @@ nav li {
   list-style: none;
 }
 
+/*Item detal page styles
+*/
+div #item-display {
+  display: flex;
+  flex-direction:column;
+  padding-left: 5px;
+}
+#item_image img{
+  width: 20em;
+  height: auto;
+  margin-left: 20px 0px;
+}
+#item-description p.green{
+  background-color: rgb(13, 110, 13);
+  border-radius: 5px;
+  padding: 5px;
+  width:fit-content;
+  color:white;
+}
+#item-description p.box{
+  background-color: var(--accent-color3-);
+  border-radius: 10px;
+  padding:10px;
+  width:80%;
+  height: auto;
+}
+
+/* Error dislay styles */
+div .error-display img{
+  width: 100%;
+  height: 30%;
+}
+.error-display p{
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.569);
+  font-size: 18px;  
+}
 /*
 Footer styles
 */
@@ -321,22 +358,36 @@ figure figcaption {
 
 } 
 
-#item-display {
-  display: flex;
-  border: 2px solid var(--accent-color1-);
-  flex-direction: column;
-  border-radius: 5px;
+/*item display*/
+
+div #item-display {
+  display:flex;
+  flex-direction: row;
+}
+
+div #item-description{
+  padding-top: 0px;
+  padding-left:20px;
 }
  
-.vertical-line {
-  height: inherit;
+#item-description h2{
+  margin-top: 0px;
 }
  
 #item_image img{
-  max-width:100%;
+  width: 40em;
   height: auto;
+  margin-left: 20px 0px;
 }
  
+/*error page */
+.error-display p{
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.695);
+  padding: 20px;
+  font-size: 30px;  
+}
+/* navigation bar */
 #navigation ul {
   display: flex;
   flex-direction: column;
