--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,6 +136,59 @@ div .error-display img{
   background-color: rgba(255, 255, 255, 0.569);
   font-size: 18px;  
 }
+
+/* Flash message */
+.notice {
+  color: rgb(185, 8, 8);
+  font-weight: bold;
+}
+
+/* Form styling*/
+fieldset{
+  border: solid 1px var(--accent-color1-);
+  border-radius: 10px;
+ }
+ .account {
+  width: 300px;
+  padding:20px;
+  background-color: var(--accent-color2-);
+  margin:5px;
+  border-radius: 10px;
+  font-size: 14px;
+  }
+.account button,
+.button {
+  padding:10px;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: var(--accent-color1-);
+  box-shadow: 0px 3px 6px var(--secondary-color);
+  border: none;
+  font-weight: bold;
+  font-size: 14px;
+}
+.input-control{
+  display: flex;
+  flex-direction: column;
+}
+.input-control input{
+  border: none;
+  border-radius: 5px;
+  display: block;
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: white;
+}
+.input-control #classification, textarea{
+  margin-bottom: 15px;
+}
+.small{
+  font-size: 12px;
+  padding-bottom: 10px;
+}
+
 /*
 Footer styles
 */
