--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -160,15 +160,19 @@ fieldset{
 .button {
   padding:10px;
   border-radius: 10px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin-top: 50px;
+  /* margin-bottom: 10px; */
   width: 100%;
-  background-color: var(--accent-color1-);
+  background-color: #4088c8c6;
   box-shadow: 0px 3px 6px var(--secondary-color);
   border: none;
   font-weight: bold;
   font-size: 14px;
 }
+.account button:hover{
+  background-color:var(--accent-color1-);
+}
+
 .input-control{
   display: flex;
   flex-direction: column;
@@ -188,6 +192,33 @@ fieldset{
   font-size: 12px;
   padding-bottom: 10px;
 }
+
+#passwordHide {
+  border: 2px solid var(--accent-color1-);
+  border-radius: 3px;
+  padding: 2px;
+  /* margin-top: 1em; */
+  font-size: small;
+  width: 100%;
+  height: 25px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#passwordHide:hover{
+  border:2px solid var(--accent-color1-);
+  background-color: var(--accent-color1-);
+  color: white;
+  border-radius: 3px;
+  padding: 2px;
+  /* margin-top: 1em; */
+  font-size: small;
+  width: 100%;
+  height: 25px;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+} 
 
 /*
 Footer styles
