--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -161,7 +161,6 @@ fieldset{
   padding:10px;
   border-radius: 10px;
   margin-top: 50px;
-  /* margin-bottom: 10px; */
   width: 100%;
   background-color: #4088c8c6;
   box-shadow: 0px 3px 6px var(--secondary-color);
@@ -197,7 +196,6 @@ fieldset{
   border: 2px solid var(--accent-color1-);
   border-radius: 3px;
   padding: 2px;
-  /* margin-top: 1em; */
   font-size: small;
   width: 100%;
   height: 25px;
@@ -211,7 +209,6 @@ fieldset{
   color: white;
   border-radius: 3px;
   padding: 2px;
-  /* margin-top: 1em; */
   font-size: small;
   width: 100%;
   height: 25px;
@@ -219,6 +216,17 @@ fieldset{
   text-align: center;
   cursor: pointer;
 } 
+
+/* input form validation  */
+input:required:invalid, input:focus:invalid{
+  background-color: rgb(245, 156, 156);
+} 
+ input:required:valid{
+  background-color: rgb(211, 240, 168);
+ }
+.mssg{
+  padding-bottom: 15px;
+}
 
 /*
 Footer styles
