--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -5,20 +5,20 @@
     } %>
 
 <%- messages()%>
-
+  
 <form class="account" action="/account/register" method="post"> 
     <p><b>**All fields are required</b></p>
     <div class="input-control">
     <label for="firstname">First Name:</label>
-    <input type="text" id="firstname" name="account_firstname" size="10" value="<%= locals.account_firstname %>" required>
+    <input type="text" id="firstname" name="account_firstname" size="10" required value="<%= locals.account_firstname %>">
    </div>
    <div class="input-control">
     <label for="lastname">Last Name:</label>
-    <input type="text" id="lastname" name="account_lastname" value="<%= locals.account_lastname %>" required>
+    <input type="text" id="lastname" name="account_lastname"  required value="<%= locals.account_lastname %>">
    </div> 
     <div class="input-control">
     <label for="email">Email Address:</label>
-    <input type="email" id="email" name="account_email" placeholder="john@email.com" value="<%= locals.account_email %>" required>
+    <input type="email" id="email" name="account_email" placeholder="john@email.com"  required value="<%= locals.account_email %>">
     </div>
     <div class="input-control">
     <label for="password">Password:</label>
