--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -5,6 +5,14 @@
     } %>
 
 <%- messages()%>
+
+<% if (errors) { %>
+    <ul class="notice">
+   <% errors.array().forEach(error => { %>
+     <li><%= error.msg %></li>
+  <%  }) %>
+   </ul>
+  <% } %>
   
 <form class="account" action="/account/register" method="post"> 
     <p><b>**All fields are required</b></p>
