--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -17,19 +17,19 @@
 <form class="account" action="/account/register" method="post"> 
     <p><b>**All fields are required</b></p>
     <div class="input-control">
-    <label for="firstname">First Name:</label>
+    <label>First Name:</label>
     <input type="text" id="firstname" name="account_firstname" size="10" required value="<%= locals.account_firstname %>">
    </div>
    <div class="input-control">
-    <label for="lastname">Last Name:</label>
+    <label>Last Name:</label>
     <input type="text" id="lastname" name="account_lastname"  required value="<%= locals.account_lastname %>">
    </div> 
     <div class="input-control">
-    <label for="email">Email Address:</label>
+    <label>Email Address:</label>
     <input type="email" id="email" name="account_email" placeholder="john@email.com"  required value="<%= locals.account_email %>">
     </div>
     <div class="input-control">
-    <label for="password">Password:</label>
+    <label>Password:</label>
     <input type="password" id="password" name="account_password" 
     pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
     <span class="reveal-button active" id="passwordHide">Show password</span>
