--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -13,66 +13,66 @@
 <form class="account" action="/inv/add-inventory" method="post"> 
     <p>**All fields are required</p>
     <div class="input-control">
-    <label>Classification</label>
+    <label for="classification">Classification</label>
     <%- classificationDropdown %>
    </div>
 
    <div class="input-control">
-    <label>Make</label>
+    <label for="make">Make</label>
     <input type="text" id="make" name="inv_make" placeholder="Min of 3 characters" 
     pattern="^([a-zA-Z]){3}$"
      required value="<%= locals.inv_make %>">
    </div> 
 
     <div class="input-control">
-    <label>Model</label>
+    <label for="model">Model</label>
     <input type="text" id="model" name="inv_model" 
     placeholder="Min of 3 characters"   pattern="^([a-zA-Z]){3}$"
     value="<%= locals.inv_model %>" required >
     </div>
 
     <div class="input-control">
-    <label>Description</label>
+    <label for="description">Description</label>
     <textarea rows="5" cols="10" name="inv_description" id="description"
      required></textarea>
    </div>
 
    <div class="input-control">
-    <label>Image Path</label>
+    <label for="image">Image</label>
     <input type="text" id="image" name="inv_image" 
     value="/images/vehicles/no-image.png"<%= locals.inv_image %> required >
     </div>
 
     <div class="input-control">
-        <label>Thumbnail Path</label>
+        <label for="thumbnail">Thumbnail</label>
         <input type="text" id="thumbnail" name="inv_thumbnail" 
         value="/images/vehicles/no-image-tn.png" 
         <%= locals.inv_thumbnail %> required>
     </div>
 
      <div class="input-control">
-        <label>Price</label>
+        <label for="price">Price</label>
         <div class="small"><i>decimal or integer</i></div>
         <input type="text" id="price" name="inv_price" 
         pattern="^\d+(\.\d{2})?$" value="<%= locals.inv_price %>" required >
     </div>
 
     <div class="input-control">
-        <label>Year</label>
+        <label for="year">Year</label>
         <div class="small"><i>4-digit year</i></div>
         <input type="text" id="year" name="inv_year" 
         required pattern="^\d{4}$" value="<%= locals.inv_year %>">
     </div>
 
     <div class="input-control">
-        <label>Miles</label>
+        <label for="miles">Miles</label>
         <div class="small"><i>digits only</i></div>
         <input type="text" id="miles" name="inv_miles" 
         required pattern="\d+$" value="<%= locals.inv_miles %>">
     </div>
 
     <div class="input-control">
-        <label>Color</label>
+        <label for="color">Color</label>
         <input type="text" id="color" name="inv_color" 
         required value="<%= locals.inv_color %>">
     </div>     
