--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -18,7 +18,7 @@
     <p>**Field is required</p>
     <div class="input-control">
         <div class="mssg"><i>Name must be alphabetical characters only.</i></div>
-    <label for="classification_name">Classification Name:</label>
+    <label for="classification">Classification Name:</label>
     <input type="text" id="classification" name="classification_name" required pattern="^[a-zA-Z][a-zA-Z\s]*$">
    </div>
     <button type="submit">Add Classification</button>
