--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -15,6 +15,7 @@
     <div class="input-control">
     <label for="classification">Classification</label>
     <%- classificationDropdown %>
+    <input id="classification">
    </div>
 
    <div class="input-control">
