--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -18,3 +18,12 @@
     <a href="/inv/add-classification">Add New Classification</a><br><br>
     <a href="/inv/add-inventory">Add New Vehicle</a>
 </div>
+
+<div>
+    <h2>Manage Inventory</h2>
+    <p>Please select a classification to manage inventory items</p>
+    <%- classificationDropdown %>
+    <table id="inventoryDisplay"></table>
+    <noscript>JavaScript must be enabled to use this page.</noscript>
+    <script src="../../js/inventory.js"></script>   
+</div>
