--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -34,8 +34,8 @@
 
     <div class="input-control">
     <label for="description">Description</label>
-    <textarea rows="5" cols="10" name="inv_description" id="description"
-     required></textarea>
+    <textarea rows="5" cols="10" name="inv_description" id="description" 
+    <%- locals.inv_description %> required></textarea>
    </div>
 
    <div class="input-control">
