--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,7 @@
   --accent-color1-:#4089c8;
   --accent-color2-:rgba(197, 234, 250, 0.668);
   --accent-color3-:#d3e3f091;
+  --button-blue:#2d5375;
 
  }
 /******* Change Box Model ***************/
@@ -22,6 +23,9 @@ body {
 h1, h2 {
   font-family:"Roboto Slab", serif;
   font-size: 1.2em;
+}
+li{
+  list-style-type: none;
 }
 #wrapper {
   width: 100%;
@@ -158,15 +162,17 @@ fieldset{
   }
 .account button,
 .button {
+  color: white;
   padding:10px;
   border-radius: 10px;
   margin-top: 50px;
   width: 100%;
-  background-color: #4088c8c6;
+  background-color: var(--button-blue);
   box-shadow: 0px 3px 6px var(--secondary-color);
   border: none;
   font-weight: bold;
   font-size: 14px;
+  text-decoration: none;
 }
 .account button:hover{
   background-color:var(--accent-color1-);
@@ -367,6 +373,65 @@ figure figcaption {
   color: var(--secondary-color);
 }
 
+/* Message view */
+.message-view {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.message-view dl {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  margin: 0;
+  gap: 1rem;
+}
+.message-view dl dt, .message-view dl dd {
+  margin: 0;
+}
+.message-view dl dt {
+  font-weight: bold;
+}
+.message-view dl dt:after {
+  content: ":";
+}
+.message-pane {
+  white-space: pre-wrap;
+  font-family: var(--body-font);
+  background-color: var(--accent-color3-);
+  box-shadow: 0 3px 13px rgba(0, 0, 0, 0.107) inset;
+  border-radius:5px;
+  width: 15em;
+  padding:10px;
+  margin-left: 3px;
+}
+table { 
+  background-color: var(--accent-color3-);
+  padding: .5rem;
+  box-shadow: 0 3px 13px rgba(0, 0, 0, 0.107) inset;
+  border-radius:5px;
+  margin-left:2px;
+  margin-bottom: 20px;
+}
+thead {
+  background-color: var(--accent-color1-);
+ }
+ th,td {
+  padding:8px;
+  border:1px solid var(--accent-color1-);
+}
+tr:nth-child(even){
+  background-color: white;
+}
+ul.fixed{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top:30px;
+}
+a.button{
+  margin-right: 20px;
+}
 /***************************************/
 @media only screen and (min-width: 768px) {
  
@@ -509,6 +574,18 @@ div #item-description{
 .account button{
   margin-top: 10px;
   font-size: 18px;
+}
+
+/* messages */
+.message-pane{
+  width: 30em;
+  padding:25px;
+}
+ul.fixed{
+  display: flex;
+  flex-direction: row;
+  margin-top:30px;
+  margin-bottom: 50px;
 }
 
 }
